import "google/protobuf/descriptor.proto";

package NYT;

option go_package = "a.yandex-team.ru/mapreduce/yt/interface/protos";

message EWrapperFieldFlag
{
    enum Enum
    {
        ANY = 0;
        OTHER_COLUMNS = 1;
        ENUM_INT = 2;
        ENUM_STRING = 3;

        SERIALIZATION_YT = 4;
        SERIALIZATION_PROTOBUF = 5;

        REQUIRED_LIST = 6;
        OPTIONAL_LIST = 7;
    }
}

message EWrapperMessageFlag
{
    enum Enum
    {
        DEPRECATED_SORT_FIELDS_AS_IN_PROTO_FILE = 0;
        SORT_FIELDS_BY_FIELD_NUMBER = 1;
    }
}

extend google.protobuf.FieldOptions
{
    repeated EWrapperFieldFlag.Enum flags = 56788;
    optional string column_name = 56789;
    optional string key_column_name = 56790;
}

extend google.protobuf.MessageOptions
{
    repeated EWrapperFieldFlag.Enum default_field_flags = 56789;
    repeated EWrapperMessageFlag.Enum message_flags = 56790;
}
